# machina

./: .gitignore  .gitmodules  Makefile.in  configure  configure.ac  indent.sh  mkefi.sh  reconf.sh
.github/workflows/: makefile.yml
bootstrap/: Makefile.in  main.c
include/machina/: Makefile.in  error.h  kernparam.h  machina_types.defs  message.h  mig_errors.h  std_types.defs  std_types_32.defs  std_types_amd64.defs  syscall_sw.h  types.h  vm_param.h
kern/: Makefile.in  alloc.h  cacheobj.c  compile-in-kernel.mk  host.c  imap.c  internal.h  ipc.c  ipcspace.c  kern.h  kern_ipc.c  kmig.h  main.c  memcache.c  memctrl.c  msgbuf.c  perf.h  pglist.h  physmem.c  port.c  portref.h  portspace.c  ref.h  sched.c  sysc.c  task.c  taskref.h  thread.c  threadref.h  timer.c  vashare.c  vm.h  vmmap.c  vmobj.c  vmobjref.h  vmreg.c
libcompat_mach3/: Makefile.in  libcompat_mach3-compile.mk.in  libcompat_mach3-link.mk.in
libcompat_mach3/include/mach/: boolean.h  error.h  kern_return.h  mach.defs  mach_traps.h  mach_types.defs  mach_types.h  memory_object.h  message.h  mig_errors.h  port.h  std_types.defs  std_types.h
libmach/: Makefile.in
libmach/include/: mach.h  mach_error.h
libmach3/: Makefile.in
libmach3/include/mach/: Makefile  Makefile.in  boot_info.h  error.h  host_info.h  mach.defs  mach_port.defs  mach_types.defs  mach_types.h  machine.h  memory_object.h  message.h  mig_errors.h  norma_special_ports.h  port.h  std_types.defs  std_types.h  syscall_sw.h  vm_inherit.h  vm_param.h  vm_prot.h
libmach3/kern/: Makefile.in  libkmach3-compile.mk.in  libkmach3-link.mk.in
libmach3/user/: Makefile.in  libmach3-compile.mk.in  libmach3-link.mk.in
libmachina/: Makefile.in  libmachina-compile.mk.in  libmachina-link.mk.in  mcn.c  mig.c  syscalls.c
libmachina/machina/: machina.h  mig.h  syscalls.h
m4/: kmod.m4
tests/: Makefile.in
tests/ipc_test/: Makefile.in  main.c  mtest.c  utils.h
tests/libcstest/: Makefile.in  cs.defs
tests/libcstest/user/: Makefile.in
tests/libkstest/: Makefile.in  ks.defs
tests/libkstest/include/: ks_syscalls.h
tests/libkstest/kern/: Makefile.in  ks.c  ks_sysc.c  kstest-kmod.mk.in
tests/libkstest/user/: Makefile.in  ks.h  kslib.c
tests/libkutest/: Makefile.in  ku.defs
tests/libkutest/kern/: Makefile.in  kutest-kmod.mk.in
tests/libkutest/user/: Makefile.in
tests/test/: Makefile.in  main.c
tools/mig/: ChangeLog  Makefile.in  README  cross64.h  error.c  error.h  global.c  global.h  header.c  lexxer.l  mig.in  migcom.c  parser.y  routine.c  routine.h  server.c  statement.c  statement.h  str.h  string.c  type.c  type.h  user.c  utils.c  utils.h  write.h
tools/mkobj/: mkobj.sh  obj.h.in
(+14 files in other folders)
